# umsl-competition-2018

./: CMakeLists.txt  README.md  b  d  fileX  fileY  patientData.txt  prog1.cpp  prog2.cpp  prog3.cpp  prog4  prog4.cpp  prog5  prog5.cpp  prog6.cpp  prog7.cpp  prog8  prog8.cpp  r
